Issue #7133: SSL objects now support the new buffer API.

This fixes the test_ssl failure.